--- a/scaleway/testdata/function-namespace-basic.cassette.yaml
+++ b/scaleway/testdata/function-namespace-basic.cassette.yaml
@@ -13,378 +13,7 @@ interactions:
     url: https://api.scaleway.com/functions/v1beta1/regions/fr-par/namespaces
     method: POST
   response:
-    body: '{"id":"03ecf7a0-6eef-4729-a5c7-b82e50e1b27f","name":"test-cr-ns-01","environment_variables":{},"organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","status":"pending","registry_namespace_id":"","error_message":null,"registry_endpoint":"","description":"","secret_environment_variables":[],"region":"fr-par"}'
-    headers:
-      Content-Length:
-      - "363"
-      Content-Security-Policy:
-      - default-src 'none'; frame-ancestors 'none'
-      Content-Type:
-      - application/json
-      Date:
-      - Tue, 22 Feb 2022 13:17:08 GMT
-      Server:
-      - Scaleway API-Gateway
-      Strict-Transport-Security:
-      - max-age=63072000
-      X-Content-Type-Options:
-      - nosniff
-      X-Frame-Options:
-      - DENY
-      X-Request-Id:
-      - b54aca27-ee75-44b1-9331-8a13041fad33
-    status: 200 OK
-    code: 200
-    duration: ""
-- request:
-    body: ""
-    form: {}
-    headers:
-      User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
-        terraform/terraform-tests
-    url: https://api.scaleway.com/functions/v1beta1/regions/fr-par/namespaces/03ecf7a0-6eef-4729-a5c7-b82e50e1b27f
-    method: GET
-  response:
-    body: '{"id":"03ecf7a0-6eef-4729-a5c7-b82e50e1b27f","name":"test-cr-ns-01","environment_variables":{},"organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","status":"pending","registry_namespace_id":"","error_message":null,"registry_endpoint":"","description":"","secret_environment_variables":[],"region":"fr-par"}'
-    headers:
-      Content-Length:
-      - "363"
-      Content-Security-Policy:
-      - default-src 'none'; frame-ancestors 'none'
-      Content-Type:
-      - application/json
-      Date:
-      - Tue, 22 Feb 2022 13:17:08 GMT
-      Server:
-      - Scaleway API-Gateway
-      Strict-Transport-Security:
-      - max-age=63072000
-      X-Content-Type-Options:
-      - nosniff
-      X-Frame-Options:
-      - DENY
-      X-Request-Id:
-      - d1f08543-8e45-4c8e-badc-c1054c1ef427
-    status: 200 OK
-    code: 200
-    duration: ""
-- request:
-    body: ""
-    form: {}
-    headers:
-      User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
-        terraform/terraform-tests
-    url: https://api.scaleway.com/functions/v1beta1/regions/fr-par/namespaces/03ecf7a0-6eef-4729-a5c7-b82e50e1b27f
-    method: GET
-  response:
-    body: '{"id":"03ecf7a0-6eef-4729-a5c7-b82e50e1b27f","name":"test-cr-ns-01","environment_variables":{},"organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","status":"pending","registry_namespace_id":"","error_message":null,"registry_endpoint":"","description":"","secret_environment_variables":[],"region":"fr-par"}'
-    headers:
-      Content-Length:
-      - "363"
-      Content-Security-Policy:
-      - default-src 'none'; frame-ancestors 'none'
-      Content-Type:
-      - application/json
-      Date:
-      - Tue, 22 Feb 2022 13:17:08 GMT
-      Server:
-      - Scaleway API-Gateway
-      Strict-Transport-Security:
-      - max-age=63072000
-      X-Content-Type-Options:
-      - nosniff
-      X-Frame-Options:
-      - DENY
-      X-Request-Id:
-      - 8a564d20-cfbc-4171-8b5d-c17a9b4e5361
-    status: 200 OK
-    code: 200
-    duration: ""
-- request:
-    body: ""
-    form: {}
-    headers:
-      User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
-        terraform/terraform-tests
-    url: https://api.scaleway.com/functions/v1beta1/regions/fr-par/namespaces/03ecf7a0-6eef-4729-a5c7-b82e50e1b27f
-    method: GET
-  response:
-    body: '{"id":"03ecf7a0-6eef-4729-a5c7-b82e50e1b27f","name":"test-cr-ns-01","environment_variables":{},"organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","status":"pending","registry_namespace_id":"","error_message":null,"registry_endpoint":"","description":"","secret_environment_variables":[],"region":"fr-par"}'
-    headers:
-      Content-Length:
-      - "363"
-      Content-Security-Policy:
-      - default-src 'none'; frame-ancestors 'none'
-      Content-Type:
-      - application/json
-      Date:
-      - Tue, 22 Feb 2022 13:17:09 GMT
-      Server:
-      - Scaleway API-Gateway
-      Strict-Transport-Security:
-      - max-age=63072000
-      X-Content-Type-Options:
-      - nosniff
-      X-Frame-Options:
-      - DENY
-      X-Request-Id:
-      - 42d7e66b-08b7-4fb9-a299-02d442ed79aa
-    status: 200 OK
-    code: 200
-    duration: ""
-- request:
-    body: ""
-    form: {}
-    headers:
-      User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
-        terraform/terraform-tests
-    url: https://api.scaleway.com/functions/v1beta1/regions/fr-par/namespaces/03ecf7a0-6eef-4729-a5c7-b82e50e1b27f
-    method: GET
-  response:
-    body: '{"id":"03ecf7a0-6eef-4729-a5c7-b82e50e1b27f","name":"test-cr-ns-01","environment_variables":{},"organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","status":"pending","registry_namespace_id":"","error_message":null,"registry_endpoint":"","description":"","secret_environment_variables":[],"region":"fr-par"}'
-    headers:
-      Content-Length:
-      - "363"
-      Content-Security-Policy:
-      - default-src 'none'; frame-ancestors 'none'
-      Content-Type:
-      - application/json
-      Date:
-      - Tue, 22 Feb 2022 13:17:09 GMT
-      Server:
-      - Scaleway API-Gateway
-      Strict-Transport-Security:
-      - max-age=63072000
-      X-Content-Type-Options:
-      - nosniff
-      X-Frame-Options:
-      - DENY
-      X-Request-Id:
-      - 17b9af56-7086-4594-95c6-df2b694c71f0
-    status: 200 OK
-    code: 200
-    duration: ""
-- request:
-    body: '{"environment_variables":null,"description":"test function namespace 01","secret_environment_variables":null}'
-    form: {}
-    headers:
-      Content-Type:
-      - application/json
-      User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
-        terraform/terraform-tests
-    url: https://api.scaleway.com/functions/v1beta1/regions/fr-par/namespaces/03ecf7a0-6eef-4729-a5c7-b82e50e1b27f
-    method: PATCH
-  response:
-    body: '{"id":"03ecf7a0-6eef-4729-a5c7-b82e50e1b27f","name":"test-cr-ns-01","environment_variables":{},"organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","status":"ready","registry_namespace_id":"6af41317-fa5d-4eb6-a175-56b720d7bb99","error_message":null,"registry_endpoint":"rg.fr-par.scw.cloud/funcscwtestcrns018z4vvfqg","description":"test
-      function namespace 01","secret_environment_variables":[],"region":"fr-par"}'
-    headers:
-      Content-Length:
-      - "468"
-      Content-Security-Policy:
-      - default-src 'none'; frame-ancestors 'none'
-      Content-Type:
-      - application/json
-      Date:
-      - Tue, 22 Feb 2022 13:17:09 GMT
-      Server:
-      - Scaleway API-Gateway
-      Strict-Transport-Security:
-      - max-age=63072000
-      X-Content-Type-Options:
-      - nosniff
-      X-Frame-Options:
-      - DENY
-      X-Request-Id:
-      - 0f78a721-3d9d-4af6-a5f9-3a70a7bc66f6
-    status: 200 OK
-    code: 200
-    duration: ""
-- request:
-    body: ""
-    form: {}
-    headers:
-      User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
-        terraform/terraform-tests
-    url: https://api.scaleway.com/functions/v1beta1/regions/fr-par/namespaces/03ecf7a0-6eef-4729-a5c7-b82e50e1b27f
-    method: GET
-  response:
-    body: '{"id":"03ecf7a0-6eef-4729-a5c7-b82e50e1b27f","name":"test-cr-ns-01","environment_variables":{},"organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","status":"ready","registry_namespace_id":"6af41317-fa5d-4eb6-a175-56b720d7bb99","error_message":null,"registry_endpoint":"rg.fr-par.scw.cloud/funcscwtestcrns018z4vvfqg","description":"test
-      function namespace 01","secret_environment_variables":[],"region":"fr-par"}'
-    headers:
-      Content-Length:
-      - "468"
-      Content-Security-Policy:
-      - default-src 'none'; frame-ancestors 'none'
-      Content-Type:
-      - application/json
-      Date:
-      - Tue, 22 Feb 2022 13:17:09 GMT
-      Server:
-      - Scaleway API-Gateway
-      Strict-Transport-Security:
-      - max-age=63072000
-      X-Content-Type-Options:
-      - nosniff
-      X-Frame-Options:
-      - DENY
-      X-Request-Id:
-      - 9a74577e-6e46-46d0-83da-cb4c3a3a16a6
-    status: 200 OK
-    code: 200
-    duration: ""
-- request:
-    body: ""
-    form: {}
-    headers:
-      User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
-        terraform/terraform-tests
-    url: https://api.scaleway.com/functions/v1beta1/regions/fr-par/namespaces/03ecf7a0-6eef-4729-a5c7-b82e50e1b27f
-    method: GET
-  response:
-    body: '{"id":"03ecf7a0-6eef-4729-a5c7-b82e50e1b27f","name":"test-cr-ns-01","environment_variables":{},"organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","status":"ready","registry_namespace_id":"6af41317-fa5d-4eb6-a175-56b720d7bb99","error_message":null,"registry_endpoint":"rg.fr-par.scw.cloud/funcscwtestcrns018z4vvfqg","description":"test
-      function namespace 01","secret_environment_variables":[],"region":"fr-par"}'
-    headers:
-      Content-Length:
-      - "468"
-      Content-Security-Policy:
-      - default-src 'none'; frame-ancestors 'none'
-      Content-Type:
-      - application/json
-      Date:
-      - Tue, 22 Feb 2022 13:17:10 GMT
-      Server:
-      - Scaleway API-Gateway
-      Strict-Transport-Security:
-      - max-age=63072000
-      X-Content-Type-Options:
-      - nosniff
-      X-Frame-Options:
-      - DENY
-      X-Request-Id:
-      - 80d0f17f-76e3-4c67-bc09-7c018d2f9221
-    status: 200 OK
-    code: 200
-    duration: ""
-- request:
-    body: ""
-    form: {}
-    headers:
-      User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
-        terraform/terraform-tests
-    url: https://api.scaleway.com/functions/v1beta1/regions/fr-par/namespaces/03ecf7a0-6eef-4729-a5c7-b82e50e1b27f
-    method: GET
-  response:
-    body: '{"id":"03ecf7a0-6eef-4729-a5c7-b82e50e1b27f","name":"test-cr-ns-01","environment_variables":{},"organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","status":"ready","registry_namespace_id":"6af41317-fa5d-4eb6-a175-56b720d7bb99","error_message":null,"registry_endpoint":"rg.fr-par.scw.cloud/funcscwtestcrns018z4vvfqg","description":"test
-      function namespace 01","secret_environment_variables":[],"region":"fr-par"}'
-    headers:
-      Content-Length:
-      - "468"
-      Content-Security-Policy:
-      - default-src 'none'; frame-ancestors 'none'
-      Content-Type:
-      - application/json
-      Date:
-      - Tue, 22 Feb 2022 13:17:10 GMT
-      Server:
-      - Scaleway API-Gateway
-      Strict-Transport-Security:
-      - max-age=63072000
-      X-Content-Type-Options:
-      - nosniff
-      X-Frame-Options:
-      - DENY
-      X-Request-Id:
-      - d5b78911-3f1f-4f76-8c4c-519f9922820b
-    status: 200 OK
-    code: 200
-    duration: ""
-- request:
-    body: ""
-    form: {}
-    headers:
-      User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
-        terraform/terraform-tests
-    url: https://api.scaleway.com/functions/v1beta1/regions/fr-par/namespaces/03ecf7a0-6eef-4729-a5c7-b82e50e1b27f
-    method: GET
-  response:
-    body: '{"id":"03ecf7a0-6eef-4729-a5c7-b82e50e1b27f","name":"test-cr-ns-01","environment_variables":{},"organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","status":"ready","registry_namespace_id":"6af41317-fa5d-4eb6-a175-56b720d7bb99","error_message":null,"registry_endpoint":"rg.fr-par.scw.cloud/funcscwtestcrns018z4vvfqg","description":"test
-      function namespace 01","secret_environment_variables":[],"region":"fr-par"}'
-    headers:
-      Content-Length:
-      - "468"
-      Content-Security-Policy:
-      - default-src 'none'; frame-ancestors 'none'
-      Content-Type:
-      - application/json
-      Date:
-      - Tue, 22 Feb 2022 13:17:10 GMT
-      Server:
-      - Scaleway API-Gateway
-      Strict-Transport-Security:
-      - max-age=63072000
-      X-Content-Type-Options:
-      - nosniff
-      X-Frame-Options:
-      - DENY
-      X-Request-Id:
-      - 342c7c06-e52c-4733-9cd3-8faaf0897525
-    status: 200 OK
-    code: 200
-    duration: ""
-- request:
-    body: ""
-    form: {}
-    headers:
-      User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
-        terraform/terraform-tests
-    url: https://api.scaleway.com/functions/v1beta1/regions/fr-par/namespaces/03ecf7a0-6eef-4729-a5c7-b82e50e1b27f
-    method: DELETE
-  response:
-    body: '{"id":"03ecf7a0-6eef-4729-a5c7-b82e50e1b27f","name":"test-cr-ns-01","environment_variables":{},"organization_id":"951df375-e094-4d26-97c1-ba548eeb9c42","project_id":"951df375-e094-4d26-97c1-ba548eeb9c42","status":"deleting","registry_namespace_id":"6af41317-fa5d-4eb6-a175-56b720d7bb99","error_message":null,"registry_endpoint":"rg.fr-par.scw.cloud/funcscwtestcrns018z4vvfqg","description":"test
-      function namespace 01","secret_environment_variables":[],"region":"fr-par"}'
-    headers:
-      Content-Length:
-      - "471"
-      Content-Security-Policy:
-      - default-src 'none'; frame-ancestors 'none'
-      Content-Type:
-      - application/json
-      Date:
-      - Tue, 22 Feb 2022 13:17:11 GMT
-      Server:
-      - Scaleway API-Gateway
-      Strict-Transport-Security:
-      - max-age=63072000
-      X-Content-Type-Options:
-      - nosniff
-      X-Frame-Options:
-      - DENY
-      X-Request-Id:
-      - 0fdb6e8e-9939-48ce-9cb2-8a5d0287bf7e
-    status: 200 OK
-    code: 200
-    duration: ""
-- request:
-    body: ""
-    form: {}
-    headers:
-      User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
-        terraform/terraform-tests
-    url: https://api.scaleway.com/functions/v1beta1/regions/fr-par/namespaces/03ecf7a0-6eef-4729-a5c7-b82e50e1b27f
-    method: DELETE
-  response:
-    body: '{"message":"Namespace was not found"}'
+    body: '{"message":"Namespace already exist"}'
     headers:
       Content-Length:
       - "37"
@@ -393,7 +22,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 22 Feb 2022 13:17:11 GMT
+      - Tue, 22 Feb 2022 13:34:01 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -403,7 +32,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - f7e3e539-192c-4ba8-ab62-40873fea79ec
-    status: 404 Not Found
-    code: 404
+      - 4c1bc438-56cb-4bdf-9fe5-3d45603e2073
+    status: 409 Conflict
+    code: 409
     duration: ""
