Add function to the CI

--- a/.github/workflows/acceptance-tests.yaml
+++ b/.github/workflows/acceptance-tests.yaml
@@ -13,6 +13,7 @@ jobs:
           - AppleSilicon
           - Baremetal
           - Domain
+          - Function
           - Instance
           - Iot
           - K8S
