--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -15,6 +15,7 @@ jobs:
           - AppleSilicon
           - Baremetal
           - Domain
+          - Function
           - Instance
           - Iot
           - K8S
