feat(container): add container to acceptance test

--- a/.github/workflows/acceptance-tests.yaml
+++ b/.github/workflows/acceptance-tests.yaml
@@ -12,6 +12,7 @@ jobs:
           - Account
           - AppleSilicon
           - Baremetal
+          - Container
           - Domain
           - Function
           - Instance
