feat(deps): add container to nightly test

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -16,6 +16,7 @@ jobs:
           - Baremetal
           - Domain
           - Function
+          - Container
           - Instance
           - Iot
           - K8S
