--- a/.github/workflows/acceptance-tests.yaml
+++ b/.github/workflows/acceptance-tests.yaml
@@ -39,6 +39,7 @@ jobs:
           TF_ACC: 1
           TF_UPDATE_CASSETTES: false
           TF_TEST_DOMAIN: scaleway-terraform.com
+          TF_TEST_DOCKER_IMG: docker.io/library/alpine
           SCW_DEBUG: 0
           SCW_ACCESS_KEY: "SCWXXXXXXXXXXXXXFAKE"
           SCW_SECRET_KEY: "11111111-1111-1111-1111-111111111111"
