--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -43,6 +43,7 @@ jobs:
           # Enable recording with the cassette system. By doing so, we ensure that real HTTPS requests are made.
           TF_UPDATE_CASSETTES: true
           TF_TEST_DOMAIN: scaleway-terraform.com
+          TF_TEST_DOCKER_IMG: docker.io/library/alpine
           SCW_DEBUG: 1
           SCW_ACCESS_KEY: ${{ secrets.SCW_ACCESS_KEY }}
           SCW_SECRET_KEY: ${{ secrets.SCW_SECRET_KEY }}
@@ -66,6 +67,7 @@ jobs:
         run: make sweep
         env:
           TF_TEST_DOMAIN: scaleway-terraform.com
+          TF_TEST_DOCKER_IMG: docker.io/library/alpine
           SCW_ACCESS_KEY: ${{ secrets.SCW_ACCESS_KEY }}
           SCW_SECRET_KEY: ${{ secrets.SCW_SECRET_KEY }}
           SCW_DEFAULT_ORGANIZATION_ID: ${{ secrets.SCW_DEFAULT_ORGANIZATION_ID }}
