chore: add acceptance tests to code coverage

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -14,5 +14,7 @@ jobs:
           go-version: '1.18'
       - name: Run coverage
         run: go test -race -coverprofile=coverage.out -covermode=atomic ./...
+        env:
+          TF_ACC: 1 # It runs the integration test through the cassettes and not with real API calls
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
