--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           go-version: '1.18'
       - name: Run coverage
-        run: go test -v -coverprofile=coverage.out -covermode=atomic ./...
+        run: go test -v -timeout=2h -coverprofile=coverage.out -covermode=atomic ./...
         env:
           TF_ACC: 1 # It runs the integration test through the cassettes and not with real API calls
           TF_TEST_DOMAIN: scaleway-terraform.com
