--- a/scaleway/testdata/vpc-public-gateway-dhcp-basic.cassette.yaml
+++ b/scaleway/testdata/vpc-public-gateway-dhcp-basic.cassette.yaml
@@ -2,18 +2,18 @@
 version: 1
 interactions:
 - request:
-    body: '{"project_id":"105bdce1-64c0-48ab-899d-868455867ecf","subnet":"192.168.1.0/24","address":null,"pool_low":null,"pool_high":null,"enable_dynamic":true,"valid_lifetime":null,"renew_timer":null,"rebind_timer":null,"push_default_route":true,"push_dns_server":null,"dns_servers_override":null,"dns_search":null,"dns_local_name":null}'
+    body: '{"project_id":"105bdce1-64c0-48ab-899d-868455867ecf","subnet":"192.168.1.0/24","address":null,"pool_low":null,"pool_high":null,"enable_dynamic":true,"valid_lifetime":null,"renew_timer":null,"rebind_timer":null,"push_default_route":null,"push_dns_server":null,"dns_servers_override":null,"dns_search":null,"dns_local_name":null}'
     form: {}
     headers:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps
     method: POST
   response:
-    body: '{"id":"282a7334-89b0-4148-ba66-5db32dd977f5","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-01-27T14:15:57.103567Z","updated_at":"2022-01-27T14:15:57.103567Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    body: '{"id":"a602c70c-09b5-499a-a135-3cdd2cd87ce9","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-29T19:32:02.564184Z","updated_at":"2022-03-29T19:32:02.564184Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "568"
@@ -22,7 +22,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Thu, 27 Jan 2022 14:15:57 GMT
+      - Tue, 29 Mar 2022 19:32:02 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -32,7 +32,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 00839e8a-4aff-4a4a-bb77-060547284fc7
+      - 758738d7-598f-47e9-ae39-23287d2e69ee
     status: 200 OK
     code: 200
     duration: ""
@@ -41,12 +41,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/282a7334-89b0-4148-ba66-5db32dd977f5
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a602c70c-09b5-499a-a135-3cdd2cd87ce9
     method: GET
   response:
-    body: '{"id":"282a7334-89b0-4148-ba66-5db32dd977f5","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-01-27T14:15:57.103567Z","updated_at":"2022-01-27T14:15:57.103567Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    body: '{"id":"a602c70c-09b5-499a-a135-3cdd2cd87ce9","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-29T19:32:02.564184Z","updated_at":"2022-03-29T19:32:02.564184Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "568"
@@ -55,7 +55,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Thu, 27 Jan 2022 14:15:57 GMT
+      - Tue, 29 Mar 2022 19:32:02 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -65,7 +65,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - af1d2d84-eb18-4dd9-8ac7-cd0e6b6ca499
+      - 9636ebb6-9abf-441e-8f33-b88218204d81
     status: 200 OK
     code: 200
     duration: ""
@@ -74,12 +74,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/282a7334-89b0-4148-ba66-5db32dd977f5
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a602c70c-09b5-499a-a135-3cdd2cd87ce9
     method: GET
   response:
-    body: '{"id":"282a7334-89b0-4148-ba66-5db32dd977f5","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-01-27T14:15:57.103567Z","updated_at":"2022-01-27T14:15:57.103567Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    body: '{"id":"a602c70c-09b5-499a-a135-3cdd2cd87ce9","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-29T19:32:02.564184Z","updated_at":"2022-03-29T19:32:02.564184Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "568"
@@ -88,7 +88,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Thu, 27 Jan 2022 14:15:57 GMT
+      - Tue, 29 Mar 2022 19:32:02 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -98,7 +98,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 64aaabf5-21c2-4bcc-8ec1-57f01af6dc35
+      - 395957da-545d-4c28-ab6f-2c814734cb51
     status: 200 OK
     code: 200
     duration: ""
@@ -107,12 +107,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/282a7334-89b0-4148-ba66-5db32dd977f5
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a602c70c-09b5-499a-a135-3cdd2cd87ce9
     method: GET
   response:
-    body: '{"id":"282a7334-89b0-4148-ba66-5db32dd977f5","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-01-27T14:15:57.103567Z","updated_at":"2022-01-27T14:15:57.103567Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    body: '{"id":"a602c70c-09b5-499a-a135-3cdd2cd87ce9","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-29T19:32:02.564184Z","updated_at":"2022-03-29T19:32:02.564184Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "568"
@@ -121,7 +121,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Thu, 27 Jan 2022 14:15:57 GMT
+      - Tue, 29 Mar 2022 19:32:03 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -131,7 +131,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 76bb017d-a375-4f55-83d2-5f505a0f1469
+      - 96f3b8ed-81ed-4f0c-8bd0-371e844402e8
     status: 200 OK
     code: 200
     duration: ""
@@ -140,9 +140,9 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/282a7334-89b0-4148-ba66-5db32dd977f5
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a602c70c-09b5-499a-a135-3cdd2cd87ce9
     method: DELETE
   response:
     body: ""
@@ -152,7 +152,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Thu, 27 Jan 2022 14:15:58 GMT
+      - Tue, 29 Mar 2022 19:32:03 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -162,7 +162,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 092e54d6-b25f-423d-a9e5-6982574d85c5
+      - 52b70da5-4f73-4242-bcbc-9ed762306396
     status: 204 No Content
     code: 204
     duration: ""
@@ -171,12 +171,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.6; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/282a7334-89b0-4148-ba66-5db32dd977f5
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a602c70c-09b5-499a-a135-3cdd2cd87ce9
     method: GET
   response:
-    body: '{"message":"resource is not found","resource":"dhcp","resource_id":"282a7334-89b0-4148-ba66-5db32dd977f5","type":"not_found"}'
+    body: '{"message":"resource is not found","resource":"dhcp","resource_id":"a602c70c-09b5-499a-a135-3cdd2cd87ce9","type":"not_found"}'
     headers:
       Content-Length:
       - "125"
@@ -185,7 +185,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Thu, 27 Jan 2022 14:15:58 GMT
+      - Tue, 29 Mar 2022 19:32:03 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -195,7 +195,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - c35e0cc0-319d-4762-851d-31e487b5b31d
+      - 2c75cca2-a195-45cf-b3f0-ed7c06881561
     status: 404 Not Found
     code: 404
     duration: ""
