--- a/scaleway/testdata/vpc-public-gateway-dhcp-basic.cassette.yaml
+++ b/scaleway/testdata/vpc-public-gateway-dhcp-basic.cassette.yaml
@@ -2,7 +2,7 @@
 version: 1
 interactions:
 - request:
-    body: '{"project_id":"105bdce1-64c0-48ab-899d-868455867ecf","subnet":"192.168.1.0/24","address":null,"pool_low":null,"pool_high":null,"enable_dynamic":true,"valid_lifetime":null,"renew_timer":null,"rebind_timer":null,"push_default_route":null,"push_dns_server":null,"dns_servers_override":null,"dns_search":null,"dns_local_name":null}'
+    body: '{"project_id":"105bdce1-64c0-48ab-899d-868455867ecf","subnet":"192.168.1.0/24","address":null,"pool_low":null,"pool_high":null,"enable_dynamic":null,"valid_lifetime":null,"renew_timer":null,"rebind_timer":null,"push_default_route":null,"push_dns_server":null,"dns_servers_override":null,"dns_search":null,"dns_local_name":null}'
     form: {}
     headers:
       Content-Type:
@@ -13,7 +13,7 @@ interactions:
     url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps
     method: POST
   response:
-    body: '{"id":"a602c70c-09b5-499a-a135-3cdd2cd87ce9","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-29T19:32:02.564184Z","updated_at":"2022-03-29T19:32:02.564184Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    body: '{"id":"a64403d5-9f87-4575-9aa9-acbdea62d15f","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-30T13:28:17.367729Z","updated_at":"2022-03-30T13:28:17.367729Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "568"
@@ -22,7 +22,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 29 Mar 2022 19:32:02 GMT
+      - Wed, 30 Mar 2022 13:28:17 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -32,7 +32,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 758738d7-598f-47e9-ae39-23287d2e69ee
+      - 654c01af-2db4-4aeb-ab6a-697247239fe1
     status: 200 OK
     code: 200
     duration: ""
@@ -43,10 +43,10 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a602c70c-09b5-499a-a135-3cdd2cd87ce9
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a64403d5-9f87-4575-9aa9-acbdea62d15f
     method: GET
   response:
-    body: '{"id":"a602c70c-09b5-499a-a135-3cdd2cd87ce9","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-29T19:32:02.564184Z","updated_at":"2022-03-29T19:32:02.564184Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    body: '{"id":"a64403d5-9f87-4575-9aa9-acbdea62d15f","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-30T13:28:17.367729Z","updated_at":"2022-03-30T13:28:17.367729Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "568"
@@ -55,7 +55,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 29 Mar 2022 19:32:02 GMT
+      - Wed, 30 Mar 2022 13:28:17 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -65,7 +65,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 9636ebb6-9abf-441e-8f33-b88218204d81
+      - e4b7094c-80bc-44bf-b16a-fdbad4e73629
     status: 200 OK
     code: 200
     duration: ""
@@ -76,10 +76,10 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a602c70c-09b5-499a-a135-3cdd2cd87ce9
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a64403d5-9f87-4575-9aa9-acbdea62d15f
     method: GET
   response:
-    body: '{"id":"a602c70c-09b5-499a-a135-3cdd2cd87ce9","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-29T19:32:02.564184Z","updated_at":"2022-03-29T19:32:02.564184Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    body: '{"id":"a64403d5-9f87-4575-9aa9-acbdea62d15f","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-30T13:28:17.367729Z","updated_at":"2022-03-30T13:28:17.367729Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "568"
@@ -88,7 +88,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 29 Mar 2022 19:32:02 GMT
+      - Wed, 30 Mar 2022 13:28:17 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -98,7 +98,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 395957da-545d-4c28-ab6f-2c814734cb51
+      - ffb44a5f-a9ca-4453-90da-7a8c6c5aafb9
     status: 200 OK
     code: 200
     duration: ""
@@ -109,10 +109,10 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a602c70c-09b5-499a-a135-3cdd2cd87ce9
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a64403d5-9f87-4575-9aa9-acbdea62d15f
     method: GET
   response:
-    body: '{"id":"a602c70c-09b5-499a-a135-3cdd2cd87ce9","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-29T19:32:02.564184Z","updated_at":"2022-03-29T19:32:02.564184Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    body: '{"id":"a64403d5-9f87-4575-9aa9-acbdea62d15f","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-30T13:28:17.367729Z","updated_at":"2022-03-30T13:28:17.367729Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
     headers:
       Content-Length:
       - "568"
@@ -121,7 +121,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 29 Mar 2022 19:32:03 GMT
+      - Wed, 30 Mar 2022 13:28:17 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -131,7 +131,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 96f3b8ed-81ed-4f0c-8bd0-371e844402e8
+      - b1a856a9-88d7-4a3b-b6e1-74f30930c68c
     status: 200 OK
     code: 200
     duration: ""
@@ -142,7 +142,174 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a602c70c-09b5-499a-a135-3cdd2cd87ce9
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a64403d5-9f87-4575-9aa9-acbdea62d15f
+    method: GET
+  response:
+    body: '{"id":"a64403d5-9f87-4575-9aa9-acbdea62d15f","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-30T13:28:17.367729Z","updated_at":"2022-03-30T13:28:17.367729Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.254","enable_dynamic":true,"valid_lifetime":"3600s","renew_timer":"3000s","rebind_timer":"3060s","push_default_route":true,"push_dns_server":true,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    headers:
+      Content-Length:
+      - "568"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Wed, 30 Mar 2022 13:28:18 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - 50778021-7e4f-4f91-936b-026e574416c4
+    status: 200 OK
+    code: 200
+    duration: ""
+- request:
+    body: '{"subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.2","enable_dynamic":false,"valid_lifetime":"3000.000000000s","renew_timer":"2000.000000000s","rebind_timer":"2060.000000000s","push_default_route":false,"push_dns_server":false,"dns_servers_override":null,"dns_search":null,"dns_local_name":"priv"}'
+    form: {}
+    headers:
+      Content-Type:
+      - application/json
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a64403d5-9f87-4575-9aa9-acbdea62d15f
+    method: PATCH
+  response:
+    body: '{"id":"a64403d5-9f87-4575-9aa9-acbdea62d15f","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-30T13:28:17.367729Z","updated_at":"2022-03-30T13:28:18.505145Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.2","enable_dynamic":false,"valid_lifetime":"3000s","renew_timer":"2000s","rebind_timer":"2060s","push_default_route":false,"push_dns_server":false,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    headers:
+      Content-Length:
+      - "569"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Wed, 30 Mar 2022 13:28:18 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - 36edf351-d5d1-471e-9c1c-106484345592
+    status: 200 OK
+    code: 200
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a64403d5-9f87-4575-9aa9-acbdea62d15f
+    method: GET
+  response:
+    body: '{"id":"a64403d5-9f87-4575-9aa9-acbdea62d15f","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-30T13:28:17.367729Z","updated_at":"2022-03-30T13:28:18.505145Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.2","enable_dynamic":false,"valid_lifetime":"3000s","renew_timer":"2000s","rebind_timer":"2060s","push_default_route":false,"push_dns_server":false,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    headers:
+      Content-Length:
+      - "569"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Wed, 30 Mar 2022 13:28:18 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - e96ecbf1-92fb-4762-b3a9-4811e9fa7f75
+    status: 200 OK
+    code: 200
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a64403d5-9f87-4575-9aa9-acbdea62d15f
+    method: GET
+  response:
+    body: '{"id":"a64403d5-9f87-4575-9aa9-acbdea62d15f","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-30T13:28:17.367729Z","updated_at":"2022-03-30T13:28:18.505145Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.2","enable_dynamic":false,"valid_lifetime":"3000s","renew_timer":"2000s","rebind_timer":"2060s","push_default_route":false,"push_dns_server":false,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    headers:
+      Content-Length:
+      - "569"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Wed, 30 Mar 2022 13:28:18 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - 824993c7-1ecd-4897-931f-c216f145378f
+    status: 200 OK
+    code: 200
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a64403d5-9f87-4575-9aa9-acbdea62d15f
+    method: GET
+  response:
+    body: '{"id":"a64403d5-9f87-4575-9aa9-acbdea62d15f","organization_id":"105bdce1-64c0-48ab-899d-868455867ecf","project_id":"105bdce1-64c0-48ab-899d-868455867ecf","created_at":"2022-03-30T13:28:17.367729Z","updated_at":"2022-03-30T13:28:18.505145Z","subnet":"192.168.1.0/24","address":"192.168.1.1","pool_low":"192.168.1.2","pool_high":"192.168.1.2","enable_dynamic":false,"valid_lifetime":"3000s","renew_timer":"2000s","rebind_timer":"2060s","push_default_route":false,"push_dns_server":false,"dns_servers_override":[],"dns_search":[],"dns_local_name":"priv","zone":"fr-par-1"}'
+    headers:
+      Content-Length:
+      - "569"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Wed, 30 Mar 2022 13:28:19 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - 297b855f-669b-4434-b944-8d72bed95679
+    status: 200 OK
+    code: 200
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a64403d5-9f87-4575-9aa9-acbdea62d15f
     method: DELETE
   response:
     body: ""
@@ -152,7 +319,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 29 Mar 2022 19:32:03 GMT
+      - Wed, 30 Mar 2022 13:28:19 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -162,7 +329,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 52b70da5-4f73-4242-bcbc-9ed762306396
+      - 4c3b1c25-589d-42f1-b2d2-afb6580bbf45
     status: 204 No Content
     code: 204
     duration: ""
@@ -173,10 +340,10 @@ interactions:
       User-Agent:
       - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.7; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a602c70c-09b5-499a-a135-3cdd2cd87ce9
+    url: https://api.scaleway.com/vpc-gw/v1/zones/fr-par-1/dhcps/a64403d5-9f87-4575-9aa9-acbdea62d15f
     method: GET
   response:
-    body: '{"message":"resource is not found","resource":"dhcp","resource_id":"a602c70c-09b5-499a-a135-3cdd2cd87ce9","type":"not_found"}'
+    body: '{"message":"resource is not found","resource":"dhcp","resource_id":"a64403d5-9f87-4575-9aa9-acbdea62d15f","type":"not_found"}'
     headers:
       Content-Length:
       - "125"
@@ -185,7 +352,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 29 Mar 2022 19:32:03 GMT
+      - Wed, 30 Mar 2022 13:28:19 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -195,7 +362,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 2c75cca2-a195-45cf-b3f0-ed7c06881561
+      - 8150e286-77d1-435c-a30f-ca1b0b2beb7e
     status: 404 Not Found
     code: 404
     duration: ""
