fix data-source test and cassettes

--- a/scaleway/testdata/instance-volume-resize-not-block.cassette.yaml
+++ b/scaleway/testdata/instance-volume-resize-not-block.cassette.yaml
@@ -2,33 +2,33 @@
 version: 1
 interactions:
 - request:
-    body: '{"name":"tf-vol-dreamy-tereshkova","project":"105bdce1-64c0-48ab-899d-868455867ecf","volume_type":"l_ssd","size":20000000000}'
+    body: '{"name":"tf-vol-gifted-jennings","project":"105bdce1-64c0-48ab-899d-868455867ecf","volume_type":"l_ssd","size":20000000000}'
     form: {}
     headers:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes
     method: POST
   response:
-    body: '{"volume": {"id": "8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7", "name": "tf-vol-dreamy-tereshkova",
+    body: '{"volume": {"id": "14892ddc-1f12-474a-b57e-9af282914525", "name": "tf-vol-gifted-jennings",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:17.654997+00:00", "modification_date":
-      "2021-12-07T10:50:17.654997+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2022-04-12T10:10:47.396244+00:00", "modification_date":
+      "2022-04-12T10:10:47.396244+00:00", "tags": [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "434"
+      - "444"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:18 GMT
+      - Tue, 12 Apr 2022 10:10:47 GMT
       Location:
-      - https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
+      - https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/14892ddc-1f12-474a-b57e-9af282914525
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -38,7 +38,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 953bb8fd-eb68-4798-a2a2-bf92079f253f
+      - d64a4b08-6409-45aa-820c-e5ee264a7c04
     status: 201 Created
     code: 201
     duration: ""
@@ -47,25 +47,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/14892ddc-1f12-474a-b57e-9af282914525
     method: GET
   response:
-    body: '{"volume": {"id": "8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7", "name": "tf-vol-dreamy-tereshkova",
+    body: '{"volume": {"id": "14892ddc-1f12-474a-b57e-9af282914525", "name": "tf-vol-gifted-jennings",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:17.654997+00:00", "modification_date":
-      "2021-12-07T10:50:17.654997+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2022-04-12T10:10:47.396244+00:00", "modification_date":
+      "2022-04-12T10:10:47.396244+00:00", "tags": [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "434"
+      - "444"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:18 GMT
+      - Tue, 12 Apr 2022 10:10:48 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -75,7 +75,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 15b7c020-2aa8-4123-9a1e-5627f22f225c
+      - fe5d9128-623d-4e85-83a2-51e8127c2506
     status: 200 OK
     code: 200
     duration: ""
@@ -84,25 +84,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/14892ddc-1f12-474a-b57e-9af282914525
     method: GET
   response:
-    body: '{"volume": {"id": "8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7", "name": "tf-vol-dreamy-tereshkova",
+    body: '{"volume": {"id": "14892ddc-1f12-474a-b57e-9af282914525", "name": "tf-vol-gifted-jennings",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:17.654997+00:00", "modification_date":
-      "2021-12-07T10:50:17.654997+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2022-04-12T10:10:47.396244+00:00", "modification_date":
+      "2022-04-12T10:10:47.396244+00:00", "tags": [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "434"
+      - "444"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:18 GMT
+      - Tue, 12 Apr 2022 10:10:48 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -112,7 +112,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 171c0bd0-0bf3-4bde-ae27-9d7244c68c1e
+      - 8ad53844-39aa-400c-9b30-cbddcfb56de5
     status: 200 OK
     code: 200
     duration: ""
@@ -121,25 +121,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/14892ddc-1f12-474a-b57e-9af282914525
     method: GET
   response:
-    body: '{"volume": {"id": "8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7", "name": "tf-vol-dreamy-tereshkova",
+    body: '{"volume": {"id": "14892ddc-1f12-474a-b57e-9af282914525", "name": "tf-vol-gifted-jennings",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:17.654997+00:00", "modification_date":
-      "2021-12-07T10:50:17.654997+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2022-04-12T10:10:47.396244+00:00", "modification_date":
+      "2022-04-12T10:10:47.396244+00:00", "tags": [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "434"
+      - "444"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:18 GMT
+      - Tue, 12 Apr 2022 10:10:48 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -149,7 +149,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - fe70082e-0077-4b7b-ab81-47d7f05e9633
+      - fd849f9a-8c51-47a3-9f4d-b2654acc9839
     status: 200 OK
     code: 200
     duration: ""
@@ -158,25 +158,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/14892ddc-1f12-474a-b57e-9af282914525
     method: GET
   response:
-    body: '{"volume": {"id": "8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7", "name": "tf-vol-dreamy-tereshkova",
+    body: '{"volume": {"id": "14892ddc-1f12-474a-b57e-9af282914525", "name": "tf-vol-gifted-jennings",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:17.654997+00:00", "modification_date":
-      "2021-12-07T10:50:17.654997+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2022-04-12T10:10:47.396244+00:00", "modification_date":
+      "2022-04-12T10:10:47.396244+00:00", "tags": [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "434"
+      - "444"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:19 GMT
+      - Tue, 12 Apr 2022 10:10:48 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -186,7 +186,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - d9f26676-412c-48c0-a96b-5621e84280eb
+      - de35ee42-24bf-4e87-b67d-340202702e42
     status: 200 OK
     code: 200
     duration: ""
@@ -195,25 +195,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/14892ddc-1f12-474a-b57e-9af282914525
     method: GET
   response:
-    body: '{"volume": {"id": "8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7", "name": "tf-vol-dreamy-tereshkova",
+    body: '{"volume": {"id": "14892ddc-1f12-474a-b57e-9af282914525", "name": "tf-vol-gifted-jennings",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:17.654997+00:00", "modification_date":
-      "2021-12-07T10:50:17.654997+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2022-04-12T10:10:47.396244+00:00", "modification_date":
+      "2022-04-12T10:10:47.396244+00:00", "tags": [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "434"
+      - "444"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:19 GMT
+      - Tue, 12 Apr 2022 10:10:48 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -223,7 +223,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - ac7b70bf-4b13-4379-92a8-7a73e6da2d30
+      - 4dbd615c-a0c1-49eb-abb8-60efa611381f
     status: 200 OK
     code: 200
     duration: ""
@@ -232,9 +232,46 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/14892ddc-1f12-474a-b57e-9af282914525
+    method: GET
+  response:
+    body: '{"volume": {"id": "14892ddc-1f12-474a-b57e-9af282914525", "name": "tf-vol-gifted-jennings",
+      "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
+      "state": "available", "creation_date": "2022-04-12T10:10:47.396244+00:00", "modification_date":
+      "2022-04-12T10:10:47.396244+00:00", "tags": [], "zone": "fr-par-1"}}'
+    headers:
+      Content-Length:
+      - "444"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Tue, 12 Apr 2022 10:10:49 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - 70d8c5cb-ac56-445e-aa06-eba9d2194500
+    status: 200 OK
+    code: 200
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/14892ddc-1f12-474a-b57e-9af282914525
     method: DELETE
   response:
     body: ""
@@ -242,7 +279,7 @@ interactions:
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Date:
-      - Tue, 07 Dec 2021 10:50:20 GMT
+      - Tue, 12 Apr 2022 10:10:49 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -252,7 +289,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 2799a927-e357-42f9-918e-e117ad291079
+      - 92c96a91-f0ce-4f76-a8b9-cd99b24778f6
     status: 204 No Content
     code: 204
     duration: ""
@@ -261,12 +298,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/14892ddc-1f12-474a-b57e-9af282914525
     method: GET
   response:
-    body: '{"type": "unknown_resource", "message": "Volume ''8ac0fd56-7cf9-4c1d-a01b-6e61ba4970f7''
+    body: '{"type": "unknown_resource", "message": "Volume ''14892ddc-1f12-474a-b57e-9af282914525''
       not found."}'
     headers:
       Content-Length:
@@ -276,7 +313,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:20 GMT
+      - Tue, 12 Apr 2022 10:10:49 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -286,7 +323,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 508e60be-2142-413d-87d8-15fc14d269ab
+      - 0b35ee35-9dcf-4af0-9bd0-0099516c139d
     status: 404 Not Found
     code: 404
     duration: ""
