--- a/scaleway/testdata/data-source-instance-image-basic.cassette.yaml
+++ b/scaleway/testdata/data-source-instance-image-basic.cassette.yaml
@@ -6,7 +6,7 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/images/cf44b8f5-77e2-42ed-8f1e-09ed5bb028fc
     method: GET
@@ -17,17 +17,17 @@ interactions:
       "name": "ubuntu_20.04_focal_fossa:volume-0", "volume_type": "l_ssd", "size":
       10000000000}, "extra_volumes": {}, "public": true, "arch": "x86_64", "creation_date":
       "2020-07-09T10:38:16.265025+00:00", "modification_date": "2020-07-09T10:38:16.265025+00:00",
-      "default_bootscript": null, "from_server": null, "state": "available", "zone":
-      "fr-par-1"}}'
+      "default_bootscript": null, "from_server": null, "state": "available", "tags":
+      [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "609"
+      - "621"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:24 GMT
+      - Tue, 12 Apr 2022 10:10:53 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -37,7 +37,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - f829c66a-c7f3-410c-9757-31fdaddd4625
+      - f9425871-2dfa-416b-8b02-7545e3c1de96
     status: 200 OK
     code: 200
     duration: ""
@@ -46,7 +46,7 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/images/cf44b8f5-77e2-42ed-8f1e-09ed5bb028fc
     method: GET
@@ -57,17 +57,17 @@ interactions:
       "name": "ubuntu_20.04_focal_fossa:volume-0", "volume_type": "l_ssd", "size":
       10000000000}, "extra_volumes": {}, "public": true, "arch": "x86_64", "creation_date":
       "2020-07-09T10:38:16.265025+00:00", "modification_date": "2020-07-09T10:38:16.265025+00:00",
-      "default_bootscript": null, "from_server": null, "state": "available", "zone":
-      "fr-par-1"}}'
+      "default_bootscript": null, "from_server": null, "state": "available", "tags":
+      [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "609"
+      - "621"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:24 GMT
+      - Tue, 12 Apr 2022 10:10:53 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -77,7 +77,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - c7c290c9-f43d-4042-9238-6289e2750c40
+      - 6641816f-5596-427c-a003-73cd5b4baaa3
     status: 200 OK
     code: 200
     duration: ""
@@ -86,7 +86,7 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/images/cf44b8f5-77e2-42ed-8f1e-09ed5bb028fc
     method: GET
@@ -97,17 +97,17 @@ interactions:
       "name": "ubuntu_20.04_focal_fossa:volume-0", "volume_type": "l_ssd", "size":
       10000000000}, "extra_volumes": {}, "public": true, "arch": "x86_64", "creation_date":
       "2020-07-09T10:38:16.265025+00:00", "modification_date": "2020-07-09T10:38:16.265025+00:00",
-      "default_bootscript": null, "from_server": null, "state": "available", "zone":
-      "fr-par-1"}}'
+      "default_bootscript": null, "from_server": null, "state": "available", "tags":
+      [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "609"
+      - "621"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:25 GMT
+      - Tue, 12 Apr 2022 10:10:53 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -117,7 +117,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 29e108ad-24ec-4763-b5f8-5f177f6dfb74
+      - 1498f1f0-3b45-484f-acd8-4b0e949cb25a
     status: 200 OK
     code: 200
     duration: ""
@@ -126,7 +126,7 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/images/cf44b8f5-77e2-42ed-8f1e-09ed5bb028fc
     method: GET
@@ -137,17 +137,17 @@ interactions:
       "name": "ubuntu_20.04_focal_fossa:volume-0", "volume_type": "l_ssd", "size":
       10000000000}, "extra_volumes": {}, "public": true, "arch": "x86_64", "creation_date":
       "2020-07-09T10:38:16.265025+00:00", "modification_date": "2020-07-09T10:38:16.265025+00:00",
-      "default_bootscript": null, "from_server": null, "state": "available", "zone":
-      "fr-par-1"}}'
+      "default_bootscript": null, "from_server": null, "state": "available", "tags":
+      [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "609"
+      - "621"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:25 GMT
+      - Tue, 12 Apr 2022 10:10:53 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -157,7 +157,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 1cdf59bf-6c2a-49b8-b98b-1224bb0b7771
+      - d07a016a-9e1c-4b2c-aa04-eb0344bf4fec
     status: 200 OK
     code: 200
     duration: ""
@@ -166,7 +166,7 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/images/cf44b8f5-77e2-42ed-8f1e-09ed5bb028fc
     method: GET
@@ -177,17 +177,17 @@ interactions:
       "name": "ubuntu_20.04_focal_fossa:volume-0", "volume_type": "l_ssd", "size":
       10000000000}, "extra_volumes": {}, "public": true, "arch": "x86_64", "creation_date":
       "2020-07-09T10:38:16.265025+00:00", "modification_date": "2020-07-09T10:38:16.265025+00:00",
-      "default_bootscript": null, "from_server": null, "state": "available", "zone":
-      "fr-par-1"}}'
+      "default_bootscript": null, "from_server": null, "state": "available", "tags":
+      [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "609"
+      - "621"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:25 GMT
+      - Tue, 12 Apr 2022 10:10:53 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -197,7 +197,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 1889809d-0186-4b1b-aac1-b014dcfa8df2
+      - 297242c9-fa55-4f74-bf16-a44356c755ca
     status: 200 OK
     code: 200
     duration: ""
@@ -206,7 +206,7 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/images/cf44b8f5-77e2-42ed-8f1e-09ed5bb028fc
     method: GET
@@ -217,17 +217,17 @@ interactions:
       "name": "ubuntu_20.04_focal_fossa:volume-0", "volume_type": "l_ssd", "size":
       10000000000}, "extra_volumes": {}, "public": true, "arch": "x86_64", "creation_date":
       "2020-07-09T10:38:16.265025+00:00", "modification_date": "2020-07-09T10:38:16.265025+00:00",
-      "default_bootscript": null, "from_server": null, "state": "available", "zone":
-      "fr-par-1"}}'
+      "default_bootscript": null, "from_server": null, "state": "available", "tags":
+      [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "609"
+      - "621"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:25 GMT
+      - Tue, 12 Apr 2022 10:10:53 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -237,7 +237,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - fb110c54-4764-4a35-91f4-4187015f8e54
+      - 08749e59-4176-4335-b2f2-019418adca5c
     status: 200 OK
     code: 200
     duration: ""
@@ -246,7 +246,7 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/images/cf44b8f5-77e2-42ed-8f1e-09ed5bb028fc
     method: GET
@@ -257,17 +257,17 @@ interactions:
       "name": "ubuntu_20.04_focal_fossa:volume-0", "volume_type": "l_ssd", "size":
       10000000000}, "extra_volumes": {}, "public": true, "arch": "x86_64", "creation_date":
       "2020-07-09T10:38:16.265025+00:00", "modification_date": "2020-07-09T10:38:16.265025+00:00",
-      "default_bootscript": null, "from_server": null, "state": "available", "zone":
-      "fr-par-1"}}'
+      "default_bootscript": null, "from_server": null, "state": "available", "tags":
+      [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "609"
+      - "621"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:25 GMT
+      - Tue, 12 Apr 2022 10:10:53 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -277,7 +277,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 9fc3e2d0-e740-4dbf-b577-2941d404bf9f
+      - 67caa856-2f63-4460-94be-dc9413920705
     status: 200 OK
     code: 200
     duration: ""
@@ -286,7 +286,7 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/images/cf44b8f5-77e2-42ed-8f1e-09ed5bb028fc
     method: GET
@@ -297,17 +297,17 @@ interactions:
       "name": "ubuntu_20.04_focal_fossa:volume-0", "volume_type": "l_ssd", "size":
       10000000000}, "extra_volumes": {}, "public": true, "arch": "x86_64", "creation_date":
       "2020-07-09T10:38:16.265025+00:00", "modification_date": "2020-07-09T10:38:16.265025+00:00",
-      "default_bootscript": null, "from_server": null, "state": "available", "zone":
-      "fr-par-1"}}'
+      "default_bootscript": null, "from_server": null, "state": "available", "tags":
+      [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "609"
+      - "621"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:25 GMT
+      - Tue, 12 Apr 2022 10:10:53 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -317,7 +317,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 40eb8b22-36db-4989-9404-592dd7e24987
+      - d4267f5c-3bd4-4bf0-9b1c-957834eec3c3
     status: 200 OK
     code: 200
     duration: ""
@@ -326,7 +326,7 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/images/cf44b8f5-77e2-42ed-8f1e-09ed5bb028fc
     method: GET
@@ -337,17 +337,17 @@ interactions:
       "name": "ubuntu_20.04_focal_fossa:volume-0", "volume_type": "l_ssd", "size":
       10000000000}, "extra_volumes": {}, "public": true, "arch": "x86_64", "creation_date":
       "2020-07-09T10:38:16.265025+00:00", "modification_date": "2020-07-09T10:38:16.265025+00:00",
-      "default_bootscript": null, "from_server": null, "state": "available", "zone":
-      "fr-par-1"}}'
+      "default_bootscript": null, "from_server": null, "state": "available", "tags":
+      [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "609"
+      - "621"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:26 GMT
+      - Tue, 12 Apr 2022 10:10:54 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -357,7 +357,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 4459a3c6-3141-4f02-858e-a904cd111bd7
+      - f336edb8-18f2-4638-9642-99be001aa7a6
     status: 200 OK
     code: 200
     duration: ""
@@ -366,7 +366,7 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/images/cf44b8f5-77e2-42ed-8f1e-09ed5bb028fc
     method: GET
@@ -377,17 +377,17 @@ interactions:
       "name": "ubuntu_20.04_focal_fossa:volume-0", "volume_type": "l_ssd", "size":
       10000000000}, "extra_volumes": {}, "public": true, "arch": "x86_64", "creation_date":
       "2020-07-09T10:38:16.265025+00:00", "modification_date": "2020-07-09T10:38:16.265025+00:00",
-      "default_bootscript": null, "from_server": null, "state": "available", "zone":
-      "fr-par-1"}}'
+      "default_bootscript": null, "from_server": null, "state": "available", "tags":
+      [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "609"
+      - "621"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:26 GMT
+      - Tue, 12 Apr 2022 10:10:54 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -397,7 +397,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 77a5abc2-ae2f-4b89-8fcd-1d606ab182f0
+      - 46853dcb-856e-4d21-8d25-07d59b9fc3b9
     status: 200 OK
     code: 200
     duration: ""
@@ -406,7 +406,7 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/images/cf44b8f5-77e2-42ed-8f1e-09ed5bb028fc
     method: GET
@@ -417,17 +417,17 @@ interactions:
       "name": "ubuntu_20.04_focal_fossa:volume-0", "volume_type": "l_ssd", "size":
       10000000000}, "extra_volumes": {}, "public": true, "arch": "x86_64", "creation_date":
       "2020-07-09T10:38:16.265025+00:00", "modification_date": "2020-07-09T10:38:16.265025+00:00",
-      "default_bootscript": null, "from_server": null, "state": "available", "zone":
-      "fr-par-1"}}'
+      "default_bootscript": null, "from_server": null, "state": "available", "tags":
+      [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "609"
+      - "621"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:26 GMT
+      - Tue, 12 Apr 2022 10:10:54 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -437,7 +437,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 30a9f972-d5fe-4b1a-afe0-db516bdd00f9
+      - b237bd33-3260-4d24-b60f-2966038c2d45
     status: 200 OK
     code: 200
     duration: ""
@@ -446,7 +446,7 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/images/cf44b8f5-77e2-42ed-8f1e-09ed5bb028fc
     method: GET
@@ -457,17 +457,17 @@ interactions:
       "name": "ubuntu_20.04_focal_fossa:volume-0", "volume_type": "l_ssd", "size":
       10000000000}, "extra_volumes": {}, "public": true, "arch": "x86_64", "creation_date":
       "2020-07-09T10:38:16.265025+00:00", "modification_date": "2020-07-09T10:38:16.265025+00:00",
-      "default_bootscript": null, "from_server": null, "state": "available", "zone":
-      "fr-par-1"}}'
+      "default_bootscript": null, "from_server": null, "state": "available", "tags":
+      [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "609"
+      - "621"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:26 GMT
+      - Tue, 12 Apr 2022 10:10:54 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -477,7 +477,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 188f6a6d-b46e-4ff5-8797-649f482153db
+      - b91fa9dd-ba33-4bab-8839-8014e0e97dc6
     status: 200 OK
     code: 200
     duration: ""
