--- a/scaleway/testdata/instance-ip-basic.cassette.yaml
+++ b/scaleway/testdata/instance-ip-basic.cassette.yaml
@@ -8,12 +8,12 @@ interactions:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips
     method: POST
   response:
-    body: '{"ip": {"id": "1ed71d85-1ef0-48e1-bf93-d326db77940b", "address": "51.158.78.198",
+    body: '{"ip": {"id": "45c07481-db26-4172-b152-41fdbf29a01a", "address": "212.47.247.29",
       "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "fr-par-1", "tags":
       []}}'
@@ -25,9 +25,9 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:45 GMT
+      - Tue, 12 Apr 2022 10:15:00 GMT
       Location:
-      - https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
+      - https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/45c07481-db26-4172-b152-41fdbf29a01a
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -37,7 +37,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 11575af2-142f-4f5e-bfac-20e8c3fa777e
+      - dc45b1c9-2cfe-4d1e-9d9b-836cf6f3ce8f
     status: 201 Created
     code: 201
     duration: ""
@@ -46,12 +46,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/45c07481-db26-4172-b152-41fdbf29a01a
     method: GET
   response:
-    body: '{"ip": {"id": "1ed71d85-1ef0-48e1-bf93-d326db77940b", "address": "51.158.78.198",
+    body: '{"ip": {"id": "45c07481-db26-4172-b152-41fdbf29a01a", "address": "212.47.247.29",
       "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "fr-par-1", "tags":
       []}}'
@@ -63,7 +63,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:45 GMT
+      - Tue, 12 Apr 2022 10:15:00 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -73,7 +73,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 106ae460-a6cb-47c7-a83c-dc7770c90005
+      - 0ac981d6-ef6d-4a9c-a462-8ba411e3a487
     status: 200 OK
     code: 200
     duration: ""
@@ -84,7 +84,7 @@ interactions:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips
     method: POST
@@ -101,7 +101,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:46 GMT
+      - Tue, 12 Apr 2022 10:15:00 GMT
       Location:
       - https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19
       Server:
@@ -113,7 +113,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - b49abd70-969b-4cdd-9dc8-9c0f589cfdc1
+      - f1dd294f-1755-46fc-a86c-f7f1d4b094ac
     status: 201 Created
     code: 201
     duration: ""
@@ -122,7 +122,7 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19
     method: GET
@@ -139,7 +139,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:46 GMT
+      - Tue, 12 Apr 2022 10:15:01 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -149,7 +149,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 542ccbcd-1e5f-4297-9ed2-82e144c8e168
+      - b8b2542e-358b-4c61-9703-31e1997de462
     status: 200 OK
     code: 200
     duration: ""
@@ -158,7 +158,7 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19
     method: GET
@@ -175,7 +175,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:46 GMT
+      - Tue, 12 Apr 2022 10:15:01 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -185,7 +185,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 7cd60d97-9e80-4b9f-80cb-88596baa908f
+      - 76bf61ed-59aa-4570-a0d8-64e90f52af99
     status: 200 OK
     code: 200
     duration: ""
@@ -194,12 +194,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/45c07481-db26-4172-b152-41fdbf29a01a
     method: GET
   response:
-    body: '{"ip": {"id": "1ed71d85-1ef0-48e1-bf93-d326db77940b", "address": "51.158.78.198",
+    body: '{"ip": {"id": "45c07481-db26-4172-b152-41fdbf29a01a", "address": "212.47.247.29",
       "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "fr-par-1", "tags":
       []}}'
@@ -211,7 +211,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:46 GMT
+      - Tue, 12 Apr 2022 10:15:01 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -221,7 +221,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - e66a4d1f-0b64-4d26-ba59-72f82b5b43a0
+      - f2bb7a0b-80ce-43a1-94f4-3f34d797fb05
     status: 200 OK
     code: 200
     duration: ""
@@ -230,7 +230,7 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19
     method: GET
@@ -247,7 +247,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:46 GMT
+      - Tue, 12 Apr 2022 10:15:01 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -257,7 +257,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 9f66dbf4-ded8-47c2-b6df-0697ff93ff6c
+      - 92c69fd6-de83-431e-b421-1c47536cba58
     status: 200 OK
     code: 200
     duration: ""
@@ -266,12 +266,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/45c07481-db26-4172-b152-41fdbf29a01a
     method: GET
   response:
-    body: '{"ip": {"id": "1ed71d85-1ef0-48e1-bf93-d326db77940b", "address": "51.158.78.198",
+    body: '{"ip": {"id": "45c07481-db26-4172-b152-41fdbf29a01a", "address": "212.47.247.29",
       "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "fr-par-1", "tags":
       []}}'
@@ -283,7 +283,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:46 GMT
+      - Tue, 12 Apr 2022 10:15:01 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -293,7 +293,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - a02d4625-b49e-4a1b-9a23-ee5a1a97841f
+      - 3725b3b6-8fe8-4b8b-b130-1a66afd88aef
     status: 200 OK
     code: 200
     duration: ""
@@ -302,7 +302,36 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/45c07481-db26-4172-b152-41fdbf29a01a
+    method: DELETE
+  response:
+    body: ""
+    headers:
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Date:
+      - Tue, 12 Apr 2022 10:15:02 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - c6c58968-95d3-4d5f-b5b5-2c662fc21cfa
+    status: 204 No Content
+    code: 204
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19
     method: DELETE
@@ -312,7 +341,7 @@ interactions:
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Date:
-      - Tue, 07 Dec 2021 10:50:47 GMT
+      - Tue, 12 Apr 2022 10:15:02 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -322,7 +351,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - be984d21-9b6a-49e4-90aa-7c1ff5569ef2
+      - 5352ab27-04a3-481f-b40a-0ec327671296
     status: 204 No Content
     code: 204
     duration: ""
@@ -331,50 +360,21 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
-        terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
-    method: DELETE
-  response:
-    body: ""
-    headers:
-      Content-Security-Policy:
-      - default-src 'none'; frame-ancestors 'none'
-      Date:
-      - Tue, 07 Dec 2021 10:50:47 GMT
-      Server:
-      - Scaleway API-Gateway
-      Strict-Transport-Security:
-      - max-age=63072000
-      X-Content-Type-Options:
-      - nosniff
-      X-Frame-Options:
-      - DENY
-      X-Request-Id:
-      - 9ee83fd2-221e-4097-b866-67a4c2b0b905
-    status: 204 No Content
-    code: 204
-    duration: ""
-- request:
-    body: ""
-    form: {}
-    headers:
-      User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19
     method: GET
   response:
-    body: '{"type": "authorization_required", "message": "Authorization required"}'
+    body: '{"type": "authorization_required", "message": "insufficient permissions"}'
     headers:
       Content-Length:
-      - "71"
+      - "73"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:47 GMT
+      - Tue, 12 Apr 2022 10:15:02 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -384,7 +384,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 6b9bceed-f709-4520-8b3e-d18ecc28ce02
+      - 76cb7ed0-c3ee-41a6-838e-4cce69267357
     status: 403 Forbidden
     code: 403
     duration: ""
@@ -393,21 +393,21 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/45c07481-db26-4172-b152-41fdbf29a01a
     method: GET
   response:
-    body: '{"type": "authorization_required", "message": "Authorization required"}'
+    body: '{"type": "authorization_required", "message": "insufficient permissions"}'
     headers:
       Content-Length:
-      - "71"
+      - "73"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:47 GMT
+      - Tue, 12 Apr 2022 10:15:02 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -417,7 +417,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 4df9d050-c821-433f-9b86-c6734de38699
+      - f5581d05-df47-405c-9ff2-f9cf7bf9216c
     status: 403 Forbidden
     code: 403
     duration: ""
