--- a/scaleway/testdata/instance-ip-with-zone.cassette.yaml
+++ b/scaleway/testdata/instance-ip-with-zone.cassette.yaml
@@ -8,12 +8,12 @@ interactions:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips
     method: POST
   response:
-    body: '{"ip": {"id": "1ed71d85-1ef0-48e1-bf93-d326db77940b", "address": "51.158.78.198",
+    body: '{"ip": {"id": "e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19", "address": "212.47.240.67",
       "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "fr-par-1", "tags":
       []}}'
@@ -25,9 +25,9 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:49 GMT
+      - Tue, 12 Apr 2022 10:14:58 GMT
       Location:
-      - https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
+      - https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -37,7 +37,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 9ba3e9a4-26eb-419c-8684-e0c0f19325d1
+      - 0efe9229-b061-40ce-b5b6-ce79011bcc0b
     status: 201 Created
     code: 201
     duration: ""
@@ -46,12 +46,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19
     method: GET
   response:
-    body: '{"ip": {"id": "1ed71d85-1ef0-48e1-bf93-d326db77940b", "address": "51.158.78.198",
+    body: '{"ip": {"id": "e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19", "address": "212.47.240.67",
       "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "fr-par-1", "tags":
       []}}'
@@ -63,7 +63,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:49 GMT
+      - Tue, 12 Apr 2022 10:14:58 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -73,7 +73,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 99b9f8e4-3a5f-4a77-b951-7fa0ce2eda98
+      - 3f1b7e46-30ea-409f-8c86-f81b9781fbea
     status: 200 OK
     code: 200
     duration: ""
@@ -82,12 +82,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19
     method: GET
   response:
-    body: '{"ip": {"id": "1ed71d85-1ef0-48e1-bf93-d326db77940b", "address": "51.158.78.198",
+    body: '{"ip": {"id": "e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19", "address": "212.47.240.67",
       "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "fr-par-1", "tags":
       []}}'
@@ -99,7 +99,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:49 GMT
+      - Tue, 12 Apr 2022 10:14:58 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -109,7 +109,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 0fa96493-71f5-4755-8b23-097294fae480
+      - 2cf0e312-271b-4bea-8657-a4d757d0e0c5
     status: 200 OK
     code: 200
     duration: ""
@@ -118,12 +118,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19
     method: GET
   response:
-    body: '{"ip": {"id": "1ed71d85-1ef0-48e1-bf93-d326db77940b", "address": "51.158.78.198",
+    body: '{"ip": {"id": "e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19", "address": "212.47.240.67",
       "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "fr-par-1", "tags":
       []}}'
@@ -135,7 +135,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:49 GMT
+      - Tue, 12 Apr 2022 10:14:59 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -145,7 +145,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 5edaa6e2-4a18-401e-b0f3-212666199f8e
+      - d11b2ae0-5896-4e1e-a1c6-9c1b177522e1
     status: 200 OK
     code: 200
     duration: ""
@@ -154,12 +154,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19
     method: GET
   response:
-    body: '{"ip": {"id": "1ed71d85-1ef0-48e1-bf93-d326db77940b", "address": "51.158.78.198",
+    body: '{"ip": {"id": "e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19", "address": "212.47.240.67",
       "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "fr-par-1", "tags":
       []}}'
@@ -171,7 +171,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:50 GMT
+      - Tue, 12 Apr 2022 10:14:59 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -181,7 +181,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - e76fd037-ef42-4eb2-a5b1-a414a99ef70b
+      - d49b718a-bdc3-4a25-85ce-15709038c63d
     status: 200 OK
     code: 200
     duration: ""
@@ -190,9 +190,9 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/1ed71d85-1ef0-48e1-bf93-d326db77940b
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/ips/e6fa219b-f1e1-4fd8-ba86-ad3da18ecf19
     method: DELETE
   response:
     body: ""
@@ -200,7 +200,7 @@ interactions:
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Date:
-      - Tue, 07 Dec 2021 10:50:50 GMT
+      - Tue, 12 Apr 2022 10:15:00 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -210,7 +210,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 9d743f2a-6b01-482c-a75c-48d26cf90464
+      - 4e327ad2-d1f2-487f-a4ff-3fc6c49d2b16
     status: 204 No Content
     code: 204
     duration: ""
@@ -221,26 +221,26 @@ interactions:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips
     method: POST
   response:
-    body: '{"ip": {"id": "22a0117c-d033-44fc-85dc-9c0c11bae1ef", "address": "51.15.113.6",
+    body: '{"ip": {"id": "f3b01755-3356-4b58-99b8-1c1b7891fb59", "address": "51.15.75.221",
       "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "nl-ams-1", "tags":
       []}}'
     headers:
       Content-Length:
-      - "252"
+      - "253"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:51 GMT
+      - Tue, 12 Apr 2022 10:15:00 GMT
       Location:
-      - https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/22a0117c-d033-44fc-85dc-9c0c11bae1ef
+      - https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/f3b01755-3356-4b58-99b8-1c1b7891fb59
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -250,7 +250,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - b42f1dd8-2f56-45b6-ad94-3dd3bfb25b3e
+      - 30ce29e6-c577-4ae5-9662-a8026524c28b
     status: 201 Created
     code: 201
     duration: ""
@@ -259,24 +259,24 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/22a0117c-d033-44fc-85dc-9c0c11bae1ef
+    url: https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/f3b01755-3356-4b58-99b8-1c1b7891fb59
     method: GET
   response:
-    body: '{"ip": {"id": "22a0117c-d033-44fc-85dc-9c0c11bae1ef", "address": "51.15.113.6",
+    body: '{"ip": {"id": "f3b01755-3356-4b58-99b8-1c1b7891fb59", "address": "51.15.75.221",
       "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "nl-ams-1", "tags":
       []}}'
     headers:
       Content-Length:
-      - "252"
+      - "253"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:51 GMT
+      - Tue, 12 Apr 2022 10:15:00 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -286,7 +286,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 4b06ba07-9d1e-4cc6-9fc5-22b6a495dcaa
+      - 16fd8eb7-e29f-42d9-84a8-8e8af6a70ec4
     status: 200 OK
     code: 200
     duration: ""
@@ -295,24 +295,24 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/22a0117c-d033-44fc-85dc-9c0c11bae1ef
+    url: https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/f3b01755-3356-4b58-99b8-1c1b7891fb59
     method: GET
   response:
-    body: '{"ip": {"id": "22a0117c-d033-44fc-85dc-9c0c11bae1ef", "address": "51.15.113.6",
+    body: '{"ip": {"id": "f3b01755-3356-4b58-99b8-1c1b7891fb59", "address": "51.15.75.221",
       "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "nl-ams-1", "tags":
       []}}'
     headers:
       Content-Length:
-      - "252"
+      - "253"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:51 GMT
+      - Tue, 12 Apr 2022 10:15:00 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -322,7 +322,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 4021a487-a26b-4ab2-8c35-fd4a10e892e0
+      - 5a6713a1-0b40-4b9b-8e23-a8867a55e7f5
     status: 200 OK
     code: 200
     duration: ""
@@ -331,24 +331,24 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/22a0117c-d033-44fc-85dc-9c0c11bae1ef
+    url: https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/f3b01755-3356-4b58-99b8-1c1b7891fb59
     method: GET
   response:
-    body: '{"ip": {"id": "22a0117c-d033-44fc-85dc-9c0c11bae1ef", "address": "51.15.113.6",
+    body: '{"ip": {"id": "f3b01755-3356-4b58-99b8-1c1b7891fb59", "address": "51.15.75.221",
       "reverse": null, "server": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "zone": "nl-ams-1", "tags":
       []}}'
     headers:
       Content-Length:
-      - "252"
+      - "253"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:52 GMT
+      - Tue, 12 Apr 2022 10:15:01 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -358,7 +358,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - f5ff0415-999f-421b-9e97-bf0c33ff6ca7
+      - 7a668b64-1933-415e-899c-f6b055e57a57
     status: 200 OK
     code: 200
     duration: ""
@@ -367,9 +367,9 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/22a0117c-d033-44fc-85dc-9c0c11bae1ef
+    url: https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/f3b01755-3356-4b58-99b8-1c1b7891fb59
     method: DELETE
   response:
     body: ""
@@ -377,7 +377,7 @@ interactions:
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Date:
-      - Tue, 07 Dec 2021 10:50:52 GMT
+      - Tue, 12 Apr 2022 10:15:01 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -387,7 +387,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 18f11d84-64e4-4854-9010-fb5c48fb0054
+      - d59ed8a2-e634-4506-b7b0-9f735fe4ea3e
     status: 204 No Content
     code: 204
     duration: ""
@@ -396,21 +396,21 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/22a0117c-d033-44fc-85dc-9c0c11bae1ef
+    url: https://api.scaleway.com/instance/v1/zones/nl-ams-1/ips/f3b01755-3356-4b58-99b8-1c1b7891fb59
     method: GET
   response:
-    body: '{"type": "authorization_required", "message": "Authorization required"}'
+    body: '{"type": "authorization_required", "message": "insufficient permissions"}'
     headers:
       Content-Length:
-      - "71"
+      - "73"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:53 GMT
+      - Tue, 12 Apr 2022 10:15:01 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -420,7 +420,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 3103c566-da51-4825-80de-5336f58cef14
+      - 729d1398-7d15-419a-8434-2d47ef74fda0
     status: 403 Forbidden
     code: 403
     duration: ""
