--- a/scaleway/testdata/instance-volume-cannot-resize-block-down.cassette.yaml
+++ b/scaleway/testdata/instance-volume-cannot-resize-block-down.cassette.yaml
@@ -2,33 +2,33 @@
 version: 1
 interactions:
 - request:
-    body: '{"name":"tf-vol-infallible-dirac","project":"105bdce1-64c0-48ab-899d-868455867ecf","volume_type":"b_ssd","size":20000000000}'
+    body: '{"name":"tf-vol-jolly-driscoll","project":"105bdce1-64c0-48ab-899d-868455867ecf","volume_type":"b_ssd","size":20000000000}'
     form: {}
     headers:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes
     method: POST
   response:
-    body: '{"volume": {"id": "92d7432b-afb0-4a2d-9584-5a917a61c6a7", "name": "tf-vol-infallible-dirac",
+    body: '{"volume": {"id": "df6ccf24-cdf2-4b51-bff1-575b47d64ab4", "name": "tf-vol-jolly-driscoll",
       "volume_type": "b_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:20.970704+00:00", "modification_date":
-      "2021-12-07T10:50:20.970704+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2022-04-12T10:10:50.253949+00:00", "modification_date":
+      "2022-04-12T10:10:50.253949+00:00", "tags": [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "433"
+      - "443"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:21 GMT
+      - Tue, 12 Apr 2022 10:10:50 GMT
       Location:
-      - https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/92d7432b-afb0-4a2d-9584-5a917a61c6a7
+      - https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/df6ccf24-cdf2-4b51-bff1-575b47d64ab4
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -38,7 +38,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - baa56785-c0eb-4ade-acc3-020ec9d83696
+      - 4c5122ae-a0c2-4592-9d47-e74a33501bb9
     status: 201 Created
     code: 201
     duration: ""
@@ -47,25 +47,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/92d7432b-afb0-4a2d-9584-5a917a61c6a7
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/df6ccf24-cdf2-4b51-bff1-575b47d64ab4
     method: GET
   response:
-    body: '{"volume": {"id": "92d7432b-afb0-4a2d-9584-5a917a61c6a7", "name": "tf-vol-infallible-dirac",
+    body: '{"volume": {"id": "df6ccf24-cdf2-4b51-bff1-575b47d64ab4", "name": "tf-vol-jolly-driscoll",
       "volume_type": "b_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:20.970704+00:00", "modification_date":
-      "2021-12-07T10:50:20.970704+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2022-04-12T10:10:50.253949+00:00", "modification_date":
+      "2022-04-12T10:10:50.253949+00:00", "tags": [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "433"
+      - "443"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:21 GMT
+      - Tue, 12 Apr 2022 10:10:50 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -75,7 +75,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 4a87649f-c02c-4b97-b2a3-cf8b0bd7987e
+      - f09ee722-337d-43cd-a791-92bcb4e09d6a
     status: 200 OK
     code: 200
     duration: ""
@@ -84,25 +84,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/92d7432b-afb0-4a2d-9584-5a917a61c6a7
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/df6ccf24-cdf2-4b51-bff1-575b47d64ab4
     method: GET
   response:
-    body: '{"volume": {"id": "92d7432b-afb0-4a2d-9584-5a917a61c6a7", "name": "tf-vol-infallible-dirac",
+    body: '{"volume": {"id": "df6ccf24-cdf2-4b51-bff1-575b47d64ab4", "name": "tf-vol-jolly-driscoll",
       "volume_type": "b_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:20.970704+00:00", "modification_date":
-      "2021-12-07T10:50:20.970704+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2022-04-12T10:10:50.253949+00:00", "modification_date":
+      "2022-04-12T10:10:50.253949+00:00", "tags": [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "433"
+      - "443"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:22 GMT
+      - Tue, 12 Apr 2022 10:10:50 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -112,7 +112,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - a92f8c69-5e89-4983-9b96-c05ad4191e89
+      - 04a28b93-3141-4c3e-8517-3e35d569d51c
     status: 200 OK
     code: 200
     duration: ""
@@ -121,25 +121,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/92d7432b-afb0-4a2d-9584-5a917a61c6a7
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/df6ccf24-cdf2-4b51-bff1-575b47d64ab4
     method: GET
   response:
-    body: '{"volume": {"id": "92d7432b-afb0-4a2d-9584-5a917a61c6a7", "name": "tf-vol-infallible-dirac",
+    body: '{"volume": {"id": "df6ccf24-cdf2-4b51-bff1-575b47d64ab4", "name": "tf-vol-jolly-driscoll",
       "volume_type": "b_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:20.970704+00:00", "modification_date":
-      "2021-12-07T10:50:20.970704+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2022-04-12T10:10:50.253949+00:00", "modification_date":
+      "2022-04-12T10:10:50.253949+00:00", "tags": [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "433"
+      - "443"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:22 GMT
+      - Tue, 12 Apr 2022 10:10:51 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -149,7 +149,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 3a2bdcec-1c86-469b-bce9-98474c41c75f
+      - b5365cdf-6a7b-442e-a4be-2b4fa8eb95f3
     status: 200 OK
     code: 200
     duration: ""
@@ -158,25 +158,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/92d7432b-afb0-4a2d-9584-5a917a61c6a7
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/df6ccf24-cdf2-4b51-bff1-575b47d64ab4
     method: GET
   response:
-    body: '{"volume": {"id": "92d7432b-afb0-4a2d-9584-5a917a61c6a7", "name": "tf-vol-infallible-dirac",
+    body: '{"volume": {"id": "df6ccf24-cdf2-4b51-bff1-575b47d64ab4", "name": "tf-vol-jolly-driscoll",
       "volume_type": "b_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:20.970704+00:00", "modification_date":
-      "2021-12-07T10:50:20.970704+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2022-04-12T10:10:50.253949+00:00", "modification_date":
+      "2022-04-12T10:10:50.253949+00:00", "tags": [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "433"
+      - "443"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:23 GMT
+      - Tue, 12 Apr 2022 10:10:51 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -186,7 +186,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 35b546f4-3695-4ae5-821a-54f02c230f73
+      - 946cb57d-7f5a-49aa-80b6-8a5b6f530f87
     status: 200 OK
     code: 200
     duration: ""
@@ -195,9 +195,46 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/92d7432b-afb0-4a2d-9584-5a917a61c6a7
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/df6ccf24-cdf2-4b51-bff1-575b47d64ab4
+    method: GET
+  response:
+    body: '{"volume": {"id": "df6ccf24-cdf2-4b51-bff1-575b47d64ab4", "name": "tf-vol-jolly-driscoll",
+      "volume_type": "b_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
+      "state": "available", "creation_date": "2022-04-12T10:10:50.253949+00:00", "modification_date":
+      "2022-04-12T10:10:50.253949+00:00", "tags": [], "zone": "fr-par-1"}}'
+    headers:
+      Content-Length:
+      - "443"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Tue, 12 Apr 2022 10:10:52 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - 88a60dd4-70ae-47d6-a55f-04b1b89fdd5b
+    status: 200 OK
+    code: 200
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/df6ccf24-cdf2-4b51-bff1-575b47d64ab4
     method: DELETE
   response:
     body: ""
@@ -205,7 +242,7 @@ interactions:
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Date:
-      - Tue, 07 Dec 2021 10:50:23 GMT
+      - Tue, 12 Apr 2022 10:10:52 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -215,7 +252,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - abb28bfc-37c3-407e-baa3-3104ab7ba512
+      - 8236a41b-4fb6-4c64-aa53-563d3dc0ade2
     status: 204 No Content
     code: 204
     duration: ""
@@ -224,12 +261,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/92d7432b-afb0-4a2d-9584-5a917a61c6a7
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/df6ccf24-cdf2-4b51-bff1-575b47d64ab4
     method: GET
   response:
-    body: '{"type": "unknown_resource", "message": "Volume ''92d7432b-afb0-4a2d-9584-5a917a61c6a7''
+    body: '{"type": "unknown_resource", "message": "Volume ''df6ccf24-cdf2-4b51-bff1-575b47d64ab4''
       not found."}'
     headers:
       Content-Length:
@@ -239,7 +276,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:23 GMT
+      - Tue, 12 Apr 2022 10:10:52 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -249,7 +286,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - b34e4331-789b-4183-832d-635c3a4824e8
+      - 179e267f-9c53-4647-b3be-7713594e7b4d
     status: 404 Not Found
     code: 404
     duration: ""
