--- a/scaleway/testdata/instance-volume-different-name-generated.cassette.yaml
+++ b/scaleway/testdata/instance-volume-different-name-generated.cassette.yaml
@@ -2,33 +2,33 @@
 version: 1
 interactions:
 - request:
-    body: '{"name":"tf-vol-nice-keller","project":"105bdce1-64c0-48ab-899d-868455867ecf","volume_type":"l_ssd","size":20000000000}'
+    body: '{"name":"tf-vol-agitated-banach","project":"105bdce1-64c0-48ab-899d-868455867ecf","volume_type":"l_ssd","size":20000000000}'
     form: {}
     headers:
       Content-Type:
       - application/json
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
     url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes
     method: POST
   response:
-    body: '{"volume": {"id": "6c20d2c8-b8c4-4505-9b86-546ec324ed4c", "name": "tf-vol-nice-keller",
+    body: '{"volume": {"id": "35da2df8-cae4-4643-b013-831635f1a12a", "name": "tf-vol-agitated-banach",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:02.956540+00:00", "modification_date":
-      "2021-12-07T10:50:02.956540+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2022-04-12T10:10:34.005040+00:00", "modification_date":
+      "2022-04-12T10:10:34.005040+00:00", "tags": [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "428"
+      - "444"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:03 GMT
+      - Tue, 12 Apr 2022 10:10:34 GMT
       Location:
-      - https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
+      - https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/35da2df8-cae4-4643-b013-831635f1a12a
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -38,7 +38,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 9f7ae172-bcc1-4dbe-889b-08b9644ed1ed
+      - 8624c1ec-df36-4d51-b546-292f6749b1eb
     status: 201 Created
     code: 201
     duration: ""
@@ -47,25 +47,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/35da2df8-cae4-4643-b013-831635f1a12a
     method: GET
   response:
-    body: '{"volume": {"id": "6c20d2c8-b8c4-4505-9b86-546ec324ed4c", "name": "tf-vol-nice-keller",
+    body: '{"volume": {"id": "35da2df8-cae4-4643-b013-831635f1a12a", "name": "tf-vol-agitated-banach",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:02.956540+00:00", "modification_date":
-      "2021-12-07T10:50:02.956540+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2022-04-12T10:10:34.005040+00:00", "modification_date":
+      "2022-04-12T10:10:34.005040+00:00", "tags": [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "428"
+      - "444"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:03 GMT
+      - Tue, 12 Apr 2022 10:10:34 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -75,7 +75,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - da8918c9-ca2f-4b78-b97c-3d54e4cfad3b
+      - 2ba64bb7-7aba-43f4-8e30-0a968750773d
     status: 200 OK
     code: 200
     duration: ""
@@ -84,25 +84,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/35da2df8-cae4-4643-b013-831635f1a12a
     method: GET
   response:
-    body: '{"volume": {"id": "6c20d2c8-b8c4-4505-9b86-546ec324ed4c", "name": "tf-vol-nice-keller",
+    body: '{"volume": {"id": "35da2df8-cae4-4643-b013-831635f1a12a", "name": "tf-vol-agitated-banach",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:02.956540+00:00", "modification_date":
-      "2021-12-07T10:50:02.956540+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2022-04-12T10:10:34.005040+00:00", "modification_date":
+      "2022-04-12T10:10:34.005040+00:00", "tags": [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "428"
+      - "444"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:04 GMT
+      - Tue, 12 Apr 2022 10:10:34 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -112,7 +112,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 025c1129-b5de-4f85-bef6-97e1ff48bb4a
+      - ead0b2f0-74b2-41e4-8869-e07ab7a189f1
     status: 200 OK
     code: 200
     duration: ""
@@ -121,25 +121,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/35da2df8-cae4-4643-b013-831635f1a12a
     method: GET
   response:
-    body: '{"volume": {"id": "6c20d2c8-b8c4-4505-9b86-546ec324ed4c", "name": "tf-vol-nice-keller",
+    body: '{"volume": {"id": "35da2df8-cae4-4643-b013-831635f1a12a", "name": "tf-vol-agitated-banach",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:02.956540+00:00", "modification_date":
-      "2021-12-07T10:50:02.956540+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2022-04-12T10:10:34.005040+00:00", "modification_date":
+      "2022-04-12T10:10:34.005040+00:00", "tags": [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "428"
+      - "444"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:04 GMT
+      - Tue, 12 Apr 2022 10:10:35 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -149,7 +149,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - f5dc8365-0217-4a17-9ee1-7aa9bd0642d5
+      - 961fc80d-6946-4071-b145-8b62392ae908
     status: 200 OK
     code: 200
     duration: ""
@@ -158,25 +158,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/35da2df8-cae4-4643-b013-831635f1a12a
     method: GET
   response:
-    body: '{"volume": {"id": "6c20d2c8-b8c4-4505-9b86-546ec324ed4c", "name": "tf-vol-nice-keller",
+    body: '{"volume": {"id": "35da2df8-cae4-4643-b013-831635f1a12a", "name": "tf-vol-agitated-banach",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:02.956540+00:00", "modification_date":
-      "2021-12-07T10:50:02.956540+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2022-04-12T10:10:34.005040+00:00", "modification_date":
+      "2022-04-12T10:10:34.005040+00:00", "tags": [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "428"
+      - "444"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:05 GMT
+      - Tue, 12 Apr 2022 10:10:35 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -186,7 +186,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 801e96e1-0614-4880-8dde-cd8ffc92bd81
+      - 9062466d-9a89-4c79-9a3d-ea1757a5071f
     status: 200 OK
     code: 200
     duration: ""
@@ -195,25 +195,25 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/35da2df8-cae4-4643-b013-831635f1a12a
     method: GET
   response:
-    body: '{"volume": {"id": "6c20d2c8-b8c4-4505-9b86-546ec324ed4c", "name": "tf-vol-nice-keller",
+    body: '{"volume": {"id": "35da2df8-cae4-4643-b013-831635f1a12a", "name": "tf-vol-agitated-banach",
       "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
       "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
-      "state": "available", "creation_date": "2021-12-07T10:50:02.956540+00:00", "modification_date":
-      "2021-12-07T10:50:02.956540+00:00", "zone": "fr-par-1"}}'
+      "state": "available", "creation_date": "2022-04-12T10:10:34.005040+00:00", "modification_date":
+      "2022-04-12T10:10:34.005040+00:00", "tags": [], "zone": "fr-par-1"}}'
     headers:
       Content-Length:
-      - "428"
+      - "444"
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:06 GMT
+      - Tue, 12 Apr 2022 10:10:36 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -223,7 +223,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - b78137ad-d08e-499d-83cc-087bbe3daacb
+      - d2923d78-76b1-4019-9f31-067c8d1a5c59
     status: 200 OK
     code: 200
     duration: ""
@@ -232,9 +232,46 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/35da2df8-cae4-4643-b013-831635f1a12a
+    method: GET
+  response:
+    body: '{"volume": {"id": "35da2df8-cae4-4643-b013-831635f1a12a", "name": "tf-vol-agitated-banach",
+      "volume_type": "l_ssd", "export_uri": null, "organization": "105bdce1-64c0-48ab-899d-868455867ecf",
+      "project": "105bdce1-64c0-48ab-899d-868455867ecf", "server": null, "size": 20000000000,
+      "state": "available", "creation_date": "2022-04-12T10:10:34.005040+00:00", "modification_date":
+      "2022-04-12T10:10:34.005040+00:00", "tags": [], "zone": "fr-par-1"}}'
+    headers:
+      Content-Length:
+      - "444"
+      Content-Security-Policy:
+      - default-src 'none'; frame-ancestors 'none'
+      Content-Type:
+      - application/json
+      Date:
+      - Tue, 12 Apr 2022 10:10:36 GMT
+      Server:
+      - Scaleway API-Gateway
+      Strict-Transport-Security:
+      - max-age=63072000
+      X-Content-Type-Options:
+      - nosniff
+      X-Frame-Options:
+      - DENY
+      X-Request-Id:
+      - 82d0039f-c6d5-4067-b2a3-b530cf7a36af
+    status: 200 OK
+    code: 200
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      User-Agent:
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
+        terraform/terraform-tests
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/35da2df8-cae4-4643-b013-831635f1a12a
     method: DELETE
   response:
     body: ""
@@ -242,7 +279,7 @@ interactions:
       Content-Security-Policy:
       - default-src 'none'; frame-ancestors 'none'
       Date:
-      - Tue, 07 Dec 2021 10:50:06 GMT
+      - Tue, 12 Apr 2022 10:10:36 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -252,7 +289,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - eb42f870-ab7e-4903-98a9-6859c79edb3d
+      - fa1b5d84-160b-4374-8efa-9619c21b4cf7
     status: 204 No Content
     code: 204
     duration: ""
@@ -261,12 +298,12 @@ interactions:
     form: {}
     headers:
       User-Agent:
-      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.17.3; darwin; amd64) terraform-provider/develop
+      - scaleway-sdk-go/v1.0.0-beta.7+dev (go1.18; darwin; amd64) terraform-provider/develop
         terraform/terraform-tests
-    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/6c20d2c8-b8c4-4505-9b86-546ec324ed4c
+    url: https://api.scaleway.com/instance/v1/zones/fr-par-1/volumes/35da2df8-cae4-4643-b013-831635f1a12a
     method: GET
   response:
-    body: '{"type": "unknown_resource", "message": "Volume ''6c20d2c8-b8c4-4505-9b86-546ec324ed4c''
+    body: '{"type": "unknown_resource", "message": "Volume ''35da2df8-cae4-4643-b013-831635f1a12a''
       not found."}'
     headers:
       Content-Length:
@@ -276,7 +313,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 07 Dec 2021 10:50:06 GMT
+      - Tue, 12 Apr 2022 10:10:36 GMT
       Server:
       - Scaleway API-Gateway
       Strict-Transport-Security:
@@ -286,7 +323,7 @@ interactions:
       X-Frame-Options:
       - DENY
       X-Request-Id:
-      - 1fd7ff3b-4e9c-421a-a0cb-be19913a817a
+      - c45eb15e-5634-45a1-9e18-cdf371ef2494
     status: 404 Not Found
     code: 404
     duration: ""
