test: add test-domain-zone environment variable to test and docs

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -44,6 +44,7 @@ jobs:
           # Enable recording with the cassette system. By doing so, we ensure that real HTTPS requests are made.
           TF_UPDATE_CASSETTES: true
           TF_TEST_DOMAIN: scaleway-terraform.com
+          TF_TEST_DOMAIN_ZONE: tf
           TF_TEST_DOCKER_IMG: docker.io/library/alpine
           SCW_DEBUG: 1
           SCW_ACCESS_KEY: ${{ secrets.SCW_ACCESS_KEY }}
