--- a/.github/workflows/acceptance-tests.yaml
+++ b/.github/workflows/acceptance-tests.yaml
@@ -40,6 +40,7 @@ jobs:
           TF_ACC: 1
           TF_UPDATE_CASSETTES: false
           TF_TEST_DOMAIN: scaleway-terraform.com
+          TF_TEST_DOMAIN_ZONE: tf
           TF_TEST_DOCKER_IMG: docker.io/library/alpine
           SCW_DEBUG: 0
           SCW_ACCESS_KEY: "SCWXXXXXXXXXXXXXFAKE"
