--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,6 +26,22 @@
 	"extensions": [
 		"golang.Go"
 	],
+	"containerEnv": {
+		// Access key of a token
+		"SCW_ACCESS_KEY": "${localEnv:SCW_ACCESS_KEY}",
+		// Secret key of a token
+		"SCW_SECRET_KEY": "${localEnv:SCW_SECRET_KEY}",
+		// Url of the API
+		//"SCW_API_URL": "${localEnv:SCW_API_URL}",
+		// Your default availability zone (fr-par-1, nl-ams-1, ...)
+		//"SCW_DEFAULT_ZONE": "${localEnv:SCW_DEFAULT_ZONE}",
+		// Your default region (fr-par, nl-ams, ...)
+		//"SCW_DEFAULT_REGION": "${localEnv:SCW_DEFAULT_REGION}",
+		// Your default project ID
+		"SCW_DEFAULT_PROJECT_ID": "${localEnv:SCW_DEFAULT_PROJECT_ID}",
+		// Your default organization ID
+		"SCW_DEFAULT_ORGANIZATION_ID": "${localEnv:SCW_DEFAULT_ORGANIZATION_ID}"
+	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
